update covers, fix things

--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,8 @@
 }
 
 .header-img {
-  width: 14.5rem;
-  height: 14.5rem;
+  width: 14rem;
+  height: 14rem;
   border-radius: 5px;
   float: left;
   margin-right: 3.2rem;
